--- a/pag/sinopse.html
+++ b/pag/sinopse.html
@@ -27,7 +27,7 @@
         </main>
         </div>
         <div class="holly">
-            <img src="/img/holly.png" alt="">
+            <img src="holly.png" alt="">
         </div>
     </div>
     </body>
